tests/core/snapshots/upstream-batching.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(batch: {delay: 1, headers: [], maxSize: 100}) {
  query: Query
}

type Query {
  user(id: Int): User
    @http(
      baseURL: "http://jsonplaceholder.typicode.com"
      batchPath: ["id"]
      path: "/users"
      query: [{key: "id", value: "{{.args.id}}"}]
    )
}

type User {
  id: Int
  name: String
}
