tests/core/snapshots/upstream-fail-request-with-body.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "IOException: {\"code\":\"UM0018\",\"message\":\"change limit exceeded\",\"cause\":\"exceeded the maximum allowed number of name changes\"}",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "extensions": {
          "ioError": {
            "code": "UM0018",
            "message": "change limit exceeded",
            "cause": "exceeded the maximum allowed number of name changes"
          }
        }
      }
    ]
  }
}
