tests/core/snapshots/upstream-fail-request.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "IOException: {}",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "extensions": {
          "ioError": {}
        }
      }
    ]
  }
}
