tests/core/snapshots/with-args.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user(id: Int!): [User]
}

type User {
  name: String
}

schema {
  query: Query
}
