tests/core/snapshots/with-nesting.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "posts": [
          {
            "title": "title1"
          },
          {
            "title": "title2"
          },
          {
            "title": "title3"
          }
        ]
      }
    }
  }
}
